# python-meme-bot

./: .env.example  .gitignore  Api.py  Constants.py  Dockerfile  Effects.py  Games.py  LICENSE  README.md  Slot.py  compose.yaml  main.py  pyproject.toml  requirements.txt
python-meme-bot/: bot.py  constants.py  slot.py
python_meme_bot/: __main__.py  api.py  bot.py  constants.py  effects.py  localization.py  slot.py  utils.py
python_meme_bot/effects/: __init__.py  checks.py  functions.py
