[tool.poetry]
name = "python-meme-bot"
version = "0.1.0"
description = "Telegram Bot that uses PIL to compute light image processing."
authors = ["BiRabittoh <andronacomarco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
python-telegram-bot = { version = "21.2", extras = ["job-queue"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
